<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/version"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp" />

        <include layout="@layout/divide_line" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/version_code"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/versionCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp" />

        <include layout="@layout/divide_line" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/package0"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/packageName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp" />

        <include layout="@layout/divide_line" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/system_application"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/systemApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp" />

        <include layout="@layout/divide_line" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/apk_size"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/appSize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp" />

        <include layout="@layout/divide_line" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/target_sdk"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/targetSDK"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp" />

        <include layout="@layout/divide_line" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/installed"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/installed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp" />

        <include layout="@layout/divide_line" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/updated"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/updated"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp" />

        <include layout="@layout/divide_line" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/permissions"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/permissions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp" />

        <include layout="@layout/divide_line" />

    </LinearLayout>

</ScrollView>